# ros2humble

bulbot/: CMakeLists.txt  README.md  package.xml
bulbot/config/: viewbot.rviz
bulbot/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
bulbot/launch/: launch_sim.launch.py  rsp.launch.py
bulbot/plugin/: mylidar.cc
bulbot/worlds/: demo.world
bulbotgaz/: CMakeLists.txt  package.xml
bulbotgaz/launch/: gazebo_bot.launch  rviz.launch
bulbotgaz/urdf/: bulbot.urdf  gazebo_control.xacro
